[package]
name = "otdrs"
version = "0.4.1"
authors = ["James Harrison <james@talkunafraid.co.uk>"]
edition = "2018"
description = "otdrs is a tool to convert OTDR Bellcore SOR files to Serdes-compatible structs and JSON/CBOR thereafter, usable as a Rust library or as a standalone tool; it can also write SORs from Rust data structures"
license = "GPL-3.0"
documentation = "https://github.com/JamesHarrison/otdrs"
homepage = "https://github.com/JamesHarrison/otdrs"
repository = "https://github.com/JamesHarrison/otdrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
clap = "3.0.0-beta.1"
crc = "2.0"

[lib]
name = "otdrs"
path = "src/lib.rs"

[[bin]]
name = "otdrs"
path = "src/otdrs.rs"
test = true
doc = true
bench = true
