[package]
name = "otdrs"
version = "1.0.2"
authors = ["James Harrison <james@talkunafraid.co.uk>"]
edition = "2018"
description = "otdrs is a tool to convert OTDR Bellcore SOR files to Serdes-compatible structs and JSON/CBOR thereafter, usable as a Rust library or as a standalone tool; it can also write SORs from Rust data structures"
license = "GPL-3.0"
documentation = "https://github.com/JamesHarrison/otdrs"
homepage = "https://github.com/JamesHarrison/otdrs"
repository = "https://github.com/JamesHarrison/otdrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
clap = { version = "4.5.42", features = ["derive"] }
crc = "3.3.0"


[dependencies.pyo3]
version = "0.25.1"
features = ["extension-module", "abi3-py37"]
optional = true

[features]
python = ["dep:pyo3"]

[lib]
name = "otdrs"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"] # cdylib is required for the Python builds

[[bin]]
name = "otdrs"
path = "src/otdrs.rs"
test = true
doc = true
bench = true
