[project]
name = "otdrs"
dynamic = ["version"]
description = "File parser and writer for optical time-domain reflectometry interchange files (Bellcore SOR)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Topic :: File Formats",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "**/*.rs" },
]


[tool.maturin]
# cargo-extra-args = "--features python"
features = ["pyo3/extension-module", "python"]

[dependency-groups]
dev = ["maturin>=1.9.2"]
